--- a/src/app/modules/dashboard/components/contact-card/contact-card.component.scss
+++ b/src/app/modules/dashboard/components/contact-card/contact-card.component.scss
@@ -1,21 +1,46 @@
+//@import "./dist/scss/variables.scss";
 :host{
   .contact-card{
     background-color: white;
-    width: 50%;
-
-    //display: flex;
-    //flex-direction: column;
+    //width: 50%;
+    border-radius: 15px;
     padding: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    box-shadow: 5px 8px 12px #888888;
   }
 
-  div{
-    //display: flex;
-    //flex-direction: row;
-    //gap: 5px;
+  .contact-info{
+    display: flex;
+    flex-direction: column;
+
+    &  div{
+      display: flex;
+      flex-direction: row;
+      gap: 5px;
+      font-size: 18px;
+    }
+
+    & .contact-title{
+      font-size: 30px;
+      margin-bottom: 25px;
+    }
   }
 
-  .contact-title{
-    font-size: 20px;
-    margin-bottom: 10px;
+  .contact-button-group{
+    margin-right: 20px;
+    display: flex;
+    gap: 20px;
+
+    & svg {
+        height: 30px;
+    }
+
+    & svg:hover{
+      fill: #ed7e3a;
+    }
   }
 }
