Create new edit contact page

--- a/src/app/modules/dashboard/components/contact-card/contact-card.component.scss
+++ b/src/app/modules/dashboard/components/contact-card/contact-card.component.scss
@@ -35,7 +35,14 @@
     display: flex;
     gap: 20px;
 
+    & button{
+      background: none;
+      border: none;
+    }
+
     & svg {
+      background: none;
+      border: none;
         height: 30px;
     }
 
