--- a/src/app/shared/contact-form/contact-form.component.html
+++ b/src/app/shared/contact-form/contact-form.component.html
@@ -3,7 +3,7 @@
     <form class="form-section" [formGroup]="contactForm" (ngSubmit)="submitContactDate()" >
         <section class="item-form-section" >
             <label class="item-label">Name</label>
-            <input type="text" placeholder="Insert name" formControlName="name"  *ngIf="checkEditForm()" />
+            <input type="text" placeholder="Insert name" formControlName="name" (change)="checkChangeValue('name')"  *ngIf="checkEditForm()" />
             <input type="text" placeholder="Insert name" formControlName="name"  *ngIf="checkNewForm()" />
             <section class="alert-message">
                                 <label *ngIf="checkNameField()">
@@ -13,7 +13,7 @@
         </section>
         <section class="item-form-section">
             <label class="item-label">E-mail</label>
-            <input type="email" placeholder="Insert the email" formControlName="email" *ngIf="checkEditForm()"/>
+            <input type="email" placeholder="Insert the email" formControlName="email" (change)="checkChangeValue('email')" *ngIf="checkEditForm()"/>
             <input type="email" placeholder="Insert the email" formControlName="email" *ngIf="checkNewForm()" />
             <section class="alert-message">
                                 <label *ngIf="checkEmailField()" >
@@ -23,7 +23,7 @@
         </section>
         <section class="item-form-section">
             <label class="item-label">Phone</label>
-            <input type="text" placeholder="Insert the Phone" formControlName="phone" *ngIf="checkEditForm()"/>
+            <input type="text" placeholder="Insert the Phone" formControlName="phone" (change)="checkChangeValue('phone')"  *ngIf="checkEditForm()"/>
             <input type="text" placeholder="Insert the Phone" formControlName="phone" *ngIf="checkNewForm()"/>
             <section class="alert-message">
                                 <label *ngIf="checkPhoneField()" >
@@ -33,7 +33,7 @@
         </section>
         <section class="item-form-section">
             <label class="item-label">City</label>
-            <input type="text" placeholder="Insert the city" formControlName="city"  *ngIf="checkEditForm()"/>
+            <input type="text" placeholder="Insert the city" formControlName="city" (change)="checkChangeValue('city')" *ngIf="checkEditForm()"/>
             <input type="text" placeholder="Insert the city" formControlName="city" *ngIf="checkNewForm()"/>
             <section class="alert-message">
                                 <label *ngIf="checkCityField()" >
@@ -43,8 +43,12 @@
         </section>
 
         <section class="button-group">
-            <button class= "buttons button-cancel" [routerLink]="['/dashboard']">Cancel</button>
-            <button class="buttons button-save" type="submit" [ngClass]="{'button-disabled': contactForm.invalid}"   [disabled]="contactForm.invalid">{{getContactButtonForm()}}</button>
+            <button class="buttons button-cancel" [routerLink]="['/dashboard']">Cancel</button>
+            <button class="buttons button-save"
+                    type="submit"
+                    [ngClass]="{'button-disabled': checkStatusSaveButton()}"
+                    [disabled]="checkStatusSaveButton()">
+                {{getContactButtonForm()}}</button>
         </section>
     </form>
 
