Implement the delete one contact flow

--- a/src/app/modules/dashboard/components/contact-list/contact-list.component.html
+++ b/src/app/modules/dashboard/components/contact-list/contact-list.component.html
@@ -1,5 +1,8 @@
 <section class="contact-list-container">
    <ng-template ngFor let-data [ngForOf]="contactsList">
-    <contact-card [contact]="data"></contact-card>
+    <contact-card
+            [contact]="data"
+            (deleteContactId)="deleteContactList($event)"
+    ></contact-card>
   </ng-template>
 </section>
