--- a/src/app/modules/edit-contract/page/edit-contact/edit-contact.component.scss
+++ b/src/app/modules/edit-contract/page/edit-contact/edit-contact.component.scss
@@ -1,6 +1,6 @@
 :host{
-    .edit-contact-container{
-        display: flex;
-        justify-content: center;
-    }
+    //.edit-contact-container{
+    //    display: flex;
+    //    justify-content: center;
+    //}
 }
