--- a/src/app/shared/contact-form/contact-form.component.scss
+++ b/src/app/shared/contact-form/contact-form.component.scss
@@ -1,8 +1,13 @@
 @import "/src/dist/scss/variables";
 
 :host{
+  .contact-container{
+        display: flex;
+        justify-content: center;
+  }
+
   .contact-form-card{
-    margin-top: 10%;
+    margin-top: 3%;
     width: 450px;
     height: 700px;
     background-color: $primary-color;
