Create new contact page

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,7 +3,7 @@
     Address book
   </section>
   <section class="header-menu">
-    <a>
+    <a [routerLink]="['/newContact']" >
       Create new contact
     </a>
   </section>
