--- a/src/app/shared/contact-list/contact-list.component.html
+++ b/src/app/shared/contact-list/contact-list.component.html
@@ -1,3 +1,4 @@
+<search-contact (searchValue)="getListBySearchValue($event)"></search-contact>
 <section class="contact-list-container">
    <ng-template ngFor let-data [ngForOf]="contactsList">
     <contact-card
