title and button fixed in new contact page

--- a/src/app/pages/new-contact/new-contact.component.html
+++ b/src/app/pages/new-contact/new-contact.component.html
@@ -1,6 +1,6 @@
 <section>
   <contact-form
-    titleForm="test 1"
-    buttonName="Save test"
-    ></contact-form>
+          titleForm="Create new contact"
+          buttonName="Save the new contact"
+  ></contact-form>
 </section>
