--- a/src/app/shared/search-contact/search-contact.component.scss
+++ b/src/app/shared/search-contact/search-contact.component.scss
@@ -34,6 +34,8 @@
   }
 
   .add-button{
+    background-color: transparent;
+    border: none;
     position: relative;
     display: flex;
     align-items: flex-end;
