Save the data contact in server

--- a/src/app/pages/new-contact/new-contact.component.html
+++ b/src/app/pages/new-contact/new-contact.component.html
@@ -2,5 +2,6 @@
   <contact-form
           titleForm="Create new contact"
           buttonName="Save the new contact"
+          (formContact)="saveNewContact($event)"
   ></contact-form>
 </section>
