added error search flow

--- a/src/app/shared/contact-list/contact-list.component.scss
+++ b/src/app/shared/contact-list/contact-list.component.scss
@@ -1,3 +1,5 @@
+@import "/src/dist/scss/variables";
+
 :host{
  .contact-list-container{
    margin: 40px auto;
@@ -9,4 +11,55 @@
    grid-template-rows: repeat(2, 1fr);
    gap: 30px;
  }
+
+  .error-search-group{
+    margin-top: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    & h1 {
+      font-size: 35px;
+      font-weight: 300;
+      color:  $sixth-color;
+    }
+
+  }
+
+  .icon-error-search-group{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    & .person-contact-icon {
+      position: absolute;
+      bottom: 40px;
+      width: 70px;
+      height: 70px;
+      fill: $sixth-color
+    }
+
+    & .magnifying-glass-icon{
+      position: absolute;
+      bottom: 75px;
+      left: -60px;
+      width: 50px;
+      height: 50px;
+      -webkit-transform: scaleX(-1);
+    }
+
+    & .search-error-circle{
+      position: absolute;
+      bottom: 25px;
+      left: 15px;
+      width: 35px;
+      height: 35px;
+      fill: $danger;
+
+
+    }
+  }
+
 }
